--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,34 +1,28 @@
-<h2>Sign up</h2>
+<div class="form-bg">  
+  <div class="form-main-container">
+    <h2>Sign up here</h2>
+    <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+      <%= devise_error_messages! %>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= devise_error_messages! %>
+        <%= f.email_field :email, autofocus: true, autocomplete: "email", placeholder:"Email" %>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+        
+
+        <%= f.password_field :password, autocomplete: "off", placeholder:"Password(6 character minimum)" %>
+
+
+        <%= f.password_field :password_confirmation, autocomplete: "off", placeholder:"Confirm Password" %>
+
+
+        <%=select_tag "role", options_for_select(Role.all.collect{|t| [t.name]}),include_blank: "Please Choose Your Role" ,:required => true%>
+
+      <div class="actions">
+        <%= f.submit "Sign up" %>
+      </div><br>
+    <% end %>
+    <%= render "devise/shared/links" %>
+    <%- if controller_name != 'sessions' %>
+      Already Register! <%= link_to "Log in", new_session_path(resource_name), class: "signup_link" %><br />
+    <% end -%>
   </div>
-
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "off" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
-  </div><br />
-
-  <div class="field">
-    <%= f.label :role %>
-    <%=select_tag "role", options_for_select(Role.all.collect{|t| [t.name]}),include_blank: "Select" ,:required => true%>
-  </div><br />
-
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+</div>  
