--- a/app/views/assignments/new.html.erb
+++ b/app/views/assignments/new.html.erb
@@ -1,13 +1,20 @@
 <div class="container">
-  <%= form_for @assignment do |f| %>
-    <%=f.fields_for :@assignment  do |assignment|%>
-      <%=assignment.label :subject%>
-      <%= assignment.text_field :subject, required: true, class: "form-control", placeholder: "subject" %>
-    <%end%>
+  <%= nested_form_for @assignment do |f| %>
+    <%= f.fields_for :assignment do |ff|%>
+      <%=ff.label :subject%>
+      <%= ff.text_field :subject, required: true, class: "form-control", placeholder: "subject" %>
 
-     <%= link_to_add_association f.assignment do %>
-      <i class="icon-cancel-circled"></i>Add More
-     <% end %>
+      <%=ff.label :description%>
+      <%= ff.text_field :description, required: true, class: "form-control", placeholder: "description" %><br/>
+
+      <%=ff.label :student%>
+      <%= ff.select :assignee_id, options_for_select(Role.find_by(name:'Student').users.collect{|t| [t.email, t.id]}),include_blank: "Select" ,:required => true%><br/>
+
+      <%=ff.label :teacher%><br/>
+      <%=ff.select :assignment_coordinates, options_for_select(Role.find_by(name:'Teacher').users.collect{|t| [t.email, t.id]}),include_blank: "Select" ,:required => true ,:multiple => true, :size =>4%><br/>
+      <%= ff.link_to_remove "Remove assignment" %>
+    <%end%>
+    <%= f.link_to_add "Add assignment", :assignment %><br>
     <%= f.button :submit, class:'btn btn-primary'%>
   <% end %>
 </div>
