--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
       <p class="alert alert-danger"><%= alert %></p>
     <%end%>
     <%if user_signed_in?%>
-      <%=link_to "Sign_out" , destroy_user_session_path , method: :delete%>
+      <%=link_to "Sign out" , destroy_user_session_path , method: :delete%>
     <%end%>
     <%= yield %>
   </body>
