--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -231,3 +231,109 @@ body .form-main-container a {
 
 
 /*-- Index-Page-Styling --*/
+
+/*header code*/
+.navbar 
+{
+    background-color: #f9f9f9;
+    /*border-color: #f9f9f9;*/
+}
+.navbar-nav > .active > a 
+{
+background-color : #04A3ED;
+color: #428bca;
+font-weight: bold;
+}
+
+.navbar-nav >  li >  a
+{
+font-size: 13px;
+color: #428bca;
+padding: 20px 25px;
+}
+/*.navbar-nav >  li >  a:hover*/
+/*{*/
+/*background-color: #04A3ED;*/
+/*}*/
+
+.navbar-header > a
+{
+font-family: 'Ubuntu Condensed', sans-serif;
+padding: 0px;
+margin: 0px;
+text-decoration: none;
+color: #428bca;
+font-size: 25px;
+padding: 5px 30px;
+}
+/*.navbar-nav .navbar-right > li:hover */
+/*{*/
+/*text-decoration: none;*/
+/*color: #04A3ED;*/
+/*}*/
+.navbar-header > a:hover 
+{
+text-decoration: none;
+color: #04A3ED;
+}
+
+.ui-autocomplete {
+    position: absolute;
+    top: 100%;
+    left: 0;
+    z-index: 1000;
+    float: left;
+    display: none;
+    min-width: 160px;
+    padding: 4px 0;
+    margin: 0;
+    list-style: none;
+    background-color: #ffffff;
+    border-color: #ccc;
+    border-color: rgba(0, 0, 0, 0.2);
+    border-style: solid;
+    border-width: 1px;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    border-radius: 5px;
+    -webkit-box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+    -moz-box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+    -webkit-background-clip: padding-box;
+    -moz-background-clip: padding;
+    background-clip: padding-box;
+    *border-right-width: 2px;
+    *border-bottom-width: 2px;
+}
+
+.ui-helper-hidden-accessible {
+    border: 0;
+    clip: rect(0 0 0 0);
+    height: 1px;
+    margin: -1px;
+    overflow: hidden;
+    padding: 0;
+    position: absolute;
+    width: 1px;
+}
+
+.ui-menu-item > a.ui-corner-all {
+    display: block;
+    padding: 3px 15px;
+    clear: both;
+    font-weight: normal;
+    line-height: 18px;
+    color: #555555;
+    white-space: nowrap;
+    text-decoration: none;
+}
+
+.ui-state-hover, .ui-state-active {
+    color: #ffffff;
+    text-decoration: none;
+    background-color: #0088cc;
+    border-radius: 0px;
+    -webkit-border-radius: 0px;
+    -moz-border-radius: 0px;
+    background-image: none;
+}
