--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,14 +8,29 @@
   </head>
 
   <body>
-    <%if notice%>
-      <p class="alert alert-success"><%= notice %></p>
-    <%elsif alert%>  
-      <p class="alert alert-danger"><%= alert %></p>
-    <%end%>
-    <%if user_signed_in?%>
-      <%=link_to "Sign out" , destroy_user_session_path , method: :delete%>
-    <%end%>
+    <div class="header-and-notice">
+      <%if notice%>
+        <p class="alert alert-success"><%= notice %></p>
+      <%elsif alert%>  
+        <p class="alert alert-danger"><%= alert %></p>
+      <%end%>
+      <%if user_signed_in?%>
+        <nav class="navbar" role="navigation">
+        <div class="navbar-header">
+          <a href="#">Assignment</a>
+        </div>
+      
+        <div>
+          <ul class="nav navbar-nav navbar-right">
+            <li><a href="/"><span class="glyphicon glyphicon-home"> Home</a></li>
+            <li>    
+            <li><a href="/users/sign_out" data-method="delete"><span class="glyphicon glyphicon-log-in"></span> Log out</a></li>
+            </li>
+          </ul>
+        </div>
+      <%end%>
+    </div>
+
     <%= yield %>
   </body>
 </html>
