--- a/app/views/assignments/new.html.erb
+++ b/app/views/assignments/new.html.erb
@@ -6,7 +6,7 @@
       <%end%>
       
       <div class="links">
-        <h3><%= link_to_add_association 'Add assignment', f, :assignments , id: 'show_submit_button'%></h3>
+        <h3><%= link_to_add_association 'Add assignment', f, :assignments , id: 'show_submit_button', class:'btn btn-primary'%></h3>
       </div>
     </div>
     <%= f.button :submit, class:'btn btn-primary',id: 'show_button'%>
