--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,30 +7,10 @@
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
-  <body>
-    <div class="header-and-notice">
-      <%if notice%>
-        <p class="alert alert-success"><%= notice %></p>
-      <%elsif alert%>  
-        <p class="alert alert-danger"><%= alert %></p>
-      <%end%>
-      <%if user_signed_in?%>
-        <nav class="navbar" role="navigation">
-        <div class="navbar-header">
-          <a href="#">Assignment</a>
-        </div>
-      
-        <div>
-          <ul class="nav navbar-nav navbar-right">
-            <li><a href="/"><span class="glyphicon glyphicon-home"> Home</a></li>
-            <li>    
-            <li><a href="/users/sign_out" data-method="delete"><span class="glyphicon glyphicon-log-in"></span> Log out</a></li>
-            </li>
-          </ul>
-        </div>
-      <%end%>
+  <body >
+    <%= render 'layouts/header'%>
+    <div class="container">
+      <%= yield %>
     </div>
-
-    <%= yield %>
   </body>
 </html>
