--- a/app/views/assignments/index.html.erb
+++ b/app/views/assignments/index.html.erb
@@ -7,7 +7,7 @@
 		<tr>
 			<th>Subject</th>
 			<th>Description</th>
-			<th>Action</th>
+			<th colspan="2">Action</th>
 		</tr>
 		<tr>
 			<%@assignments.flatten.each do |assignment|%>
