--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -7,12 +7,13 @@
   <%if user_signed_in?%>
     <nav class="navbar" role="navigation">
     <div class="header">
-      <img src="/assets/logo.png" alt="logo" />
+      <a href="/">
+        <img src="/assets/logo.png" alt="logo" />
+      </a>
     </div>
   
     <div>
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="/"><span class="glyphicon glyphicon-home"> Home</a></li>
         <li>    
         <li><a href="/users/edit"><span class="glyphicon glyphicon-edit"> Profile</a></li>
         <li><a href="/users/sign_out" data-method="delete"><span class="glyphicon glyphicon-log-in"></span> Log out</a></li>
