--- a/app/views/comments/create.js.erb
+++ b/app/views/comments/create.js.erb
@@ -1,1 +1,1 @@
-$('#display-data').html("<%= j render(:partial => 'comments/form') %>");
+$('#add-comment').html("<%= j render(:partial => 'comments/form') %>");
