--- a/app/views/assignments/show.html.erb
+++ b/app/views/assignments/show.html.erb
@@ -1,29 +1,3 @@
-<div class="create_custom_form_css">
-	Subject : <%=@assignment.subject%><br/>
-	Description : <%=@assignment.description%><br/>
-	<div id="display-data"><%= render 'comments/show_comments'%></div>
-	
-	<form >
-		<input type="text" class="form-control" placeholder="Enter Comment" id="comment">
-	  <button type="submit" class="btn btn-primary submit_comment" assignment_id="<%=@assignment.id%>">Submit</button>
-	</form> 
-</div>
-
-
-<script type="text/javascript">
-	$(".submit_comment").click(function(event) {
-		event.preventDefault();
-		var data = $("#comment").val()
-		var id = $(this).attr('assignment_id')
-		if (!data == ""){
-			$.ajax({
-				type: "POST",
-			  url: '/assignments/'+id+'/comments',
-		    data: {data: data},
-		    success: function(data) {
-	        $('#comment').val("");
-	    	}
-			})
-		}
-	});
-</script>
+<h2>Subject : <%=@assignment.subject%><br/>
+Description : <%=@assignment.description%><br/></h2>
+<%= render 'comments/form'%>
